<resources>
    <string name="app_name" translatable="false">DronePathfinder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Yevhenii Mateiko</string>
    <string name="nav_header_subtitle" translatable="false">mateyko99evgeniy@gmail.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_select_all">Select all</string>

    <string name="menu_routes">Routes</string>
    <string name="menu_drones">Drones</string>
    <string name="menu_settings">Settings</string>
    <string name="frgt_routes_desc">Here will display all your routes</string>
    <string name="frgt_drones_desc">Here will display all your drones</string>
    <string name="menu_route_planning">Route planning</string>
    <string name="alert_msg_delete_drone">Are you sure you want to delete this drone?</string>
    <string name="alert_msg_delete_route">Are you sure you want to delete this route?</string>
    <string name="alert_answer_positive">Yes</string>
    <string name="alert_answer_negative">No</string>
    <string name="menu_route_name_label">Route</string>
    <string name="menu_route_start_label">Start</string>
    <string name="menu_route_end_label">End</string>
    <string name="menu_route_length_label">Length</string>
    <string name="menu_km">km</string>
    <string name="menu_drone_name_label">Drone</string>
    <string name="alert_answer_add">Add</string>
    <string name="alert_answer_cancel">Cancel</string>
    <string name="alert_answer_save">Save</string>
    <string name="alert_title_enter_radius">Enter radius of avoidance point</string>
    <string name="alert_title_enter_route_name">Enter route name</string>
    <string name="menu_route_time_label">Time</string>
    <string name="menu_hours">h</string>
    <string name="menu_minutes">m</string>
    <string name="menu_seconds">s</string>
    <string name="algorithm_dijkstra">Dijkstra\'s Algorithm</string>
    <string name="algorithm_astar">A* Algorithm</string>
    <string name="menu_aboutroute">About route</string>
    <string name="menu_route_points_label">Points</string>
    <string name="menu_route_avoidpoints_label">Avoidance Points</string>
    <string name="menu_route_status_label">Status</string>
    <string name="menu_specs_label">Specifications</string>
    <string name="btn_add_drone">Add drone</string>
    <string name="menu_route_avoidpointsarea_label">Area of avoidance</string>
    <string name="menu_route_weight_label">Weight</string>
    <string name="menu_kg">kg</string>
    <string name="menu_square_km">km^2</string>
    <string name="status_msg_fine">Everything is fine!</string>
    <string name="status_msg_no_drone">There is no drone assigned to the route! Assign a drone by pressing the button at the bottom of the screen.</string>
    <string name="status_msg_overweight">The weight of the cargo is greater than the drone\'s payload capacity! Assign another drone by pressing the button at the bottom of the screen.</string>
    <string name="status_mgs_route_too_long">The route length is longer than the drone\'s flight range! Assign another drone by pressing the button at the bottom of the screen.</string>
    <string name="menu_mps">mps</string>
    <string name="menu_drone_flightdistance_label">Flight Distance</string>
    <string name="menu_drone_speed_label">Speed</string>
    <string name="menu_drone_payload_label">Load-carry</string>
    <string name="menu_algorithm">Algorithm</string>
    <string name="hint_enter_drone_name">Enter drone name here</string>
    <string name="hint_enter_route_name">Enter route name here</string>
    <string name="alert_answer_ok">OK</string>
    <string name="alert_not_enough_data_label">Not enough data!</string>
    <string name="alert_msg_not_enough_data">Please provide all the data!</string>
</resources>