<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_routes">

    <fragment
        android:id="@+id/nav_routes"
        android:name="com.example.dronepathfinder.ui.routes.RoutesFragment"
        android:label="@string/menu_routes"
        tools:layout="@layout/fragment_routes" />

    <fragment
        android:id="@+id/nav_drones"
        android:name="com.example.dronepathfinder.ui.drones.DronesFragment"
        android:label="@string/menu_drones"
        tools:layout="@layout/fragment_drones" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.dronepathfinder.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>