<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue_20"
    tools:context=".ui.AboutRouteActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/delete_route"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="90dp"
            app:icon="@drawable/ic_delete"
            app:iconPadding="0dp"
            app:iconSize="39dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/add_drone_to_route"
            android:layout_width="200dp"
            android:layout_height="68dp"
            android:layout_marginBottom="16dp"
            android:insetTop="0dp"
            android:text="@string/btn_add_drone"
            android:textSize="16sp"
            app:cornerRadius="90dp"
            app:icon="@drawable/ic_add"
            app:iconPadding="0dp"
            app:iconSize="39dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/update_route"
            app:layout_constraintStart_toEndOf="@+id/delete_route"
            tools:insetBottom="0dp" />

        <Button
            android:id="@+id/update_route"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="90dp"
            app:icon="@drawable/ic_save"
            app:iconPadding="0dp"
            app:iconSize="39dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_route_name_value"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner_rectangle"
            android:paddingVertical="8dp"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corner_rectangle"
            android:padding="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp">

                <TextView
                    android:id="@+id/tv_route_specs_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/menu_specs_label"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="3dp">

                <TextView
                    android:id="@+id/tv_route_start_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/menu_route_start_label"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_route_start_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="3dp">

                <TextView
                    android:id="@+id/tv_route_end_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/menu_route_end_label"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_route_end_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="3dp">

                <TextView
                    android:id="@+id/tv_route_points_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/menu_route_points_label"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_route_points_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingVertical="3dp">

                <TextView
                    android:id="@+id/tv_route_avoidpoints_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/menu_route_avoidpoints_label"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_route_avoidpoints_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingVertical="3dp">

                <TextView
                    android:id="@+id/tv_route_avoidpointsarea_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/menu_route_avoidpointsarea_label"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_route_avoidpointsarea_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingVertical="3dp">

                <TextView
                    android:id="@+id/tv_route_weight_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/menu_route_weight_label"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_route_weight_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/menu_kg"
                    android:inputType="number"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingVertical="3dp">

                <TextView
                    android:id="@+id/tv_route_length_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/menu_route_length_label"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_route_length_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingVertical="3dp">

                <TextView
                    android:id="@+id/tv_route_time_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/menu_route_time_label"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_route_time_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingVertical="3dp">

                <TextView
                    android:id="@+id/tv_route_drone_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/menu_drone_name_label"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_route_drone_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="16sp" />

            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corner_rectangle"
            android:padding="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp">

                <TextView
                    android:id="@+id/tv_route_status_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/menu_route_status_label"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="3dp">

                <ImageView
                    android:id="@+id/iv_status_value"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginHorizontal="10dp"
                    android:src="@drawable/ic_drone" />

                <TextView
                    android:id="@+id/tv_route_status_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:lineSpacingExtra="4sp"
                    android:textSize="16sp" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>