<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingHorizontal="10dp"
    android:paddingTop="10dp"
    android:paddingBottom="7dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_rectangle"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:paddingVertical="7dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingVertical="2dp">

                <TextView
                    android:id="@+id/lv_drone_name_label"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:gravity="start"
                    android:padding="2dp"
                    android:text="@string/menu_drone_name_label"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lv_drone_name_value"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:gravity="start"
                    android:padding="2dp"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingVertical="2dp">

                <TextView
                    android:id="@+id/lv_drone_flightdistance_label"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:gravity="start"
                    android:padding="2dp"
                    android:text="@string/menu_drone_flightdistance_label"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lv_drone_flightdistance_value"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:gravity="start"
                    android:padding="2dp"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingVertical="2dp">

                <TextView
                    android:id="@+id/lv_drone_speed_label"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:gravity="start"
                    android:padding="2dp"
                    android:text="@string/menu_drone_speed_label"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lv_drone_speed_value"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:gravity="start"
                    android:padding="2dp"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingVertical="2dp">

                <TextView
                    android:id="@+id/lv_drone_payload_label"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:gravity="start"
                    android:padding="2dp"
                    android:text="@string/menu_drone_payload_label"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lv_drone_payload_value"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:gravity="start"
                    android:padding="2dp"
                    android:textSize="16sp" />

            </TableRow>

        </TableLayout>

    </LinearLayout>

</LinearLayout>