<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue_20"
    tools:context=".ui.DroneActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/delete_drone"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="90dp"
            app:icon="@drawable/ic_delete"
            app:iconPadding="0dp"
            app:iconSize="39dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/save_changes_to_drone"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="90dp"
            app:icon="@drawable/ic_save"
            app:iconPadding="0dp"
            app:iconSize="39dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_drone_name_value"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner_rectangle"
            android:paddingVertical="8dp"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corner_rectangle"
            android:padding="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp">

                <TextView
                    android:id="@+id/tv_route_specs_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/menu_specs_label"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="3dp">

                <TextView
                    android:id="@+id/tv_drone_flightdistance_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/menu_drone_flightdistance_label"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_drone_flightdistance_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="3dp">

                <TextView
                    android:id="@+id/tv_drone_speed_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/menu_drone_speed_label"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_drone_speed_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingVertical="3dp">

                <TextView
                    android:id="@+id/tv_drone_payload_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/menu_drone_payload_label"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_drone_payload_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="16sp" />

            </TableRow>

        </TableLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>